--- a/Democrify/Democrify.cabal
+++ b/Democrify/Democrify.cabal
@@ -16,6 +16,6 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable Democrify
-  -- main-is:
+  main-is: Main.hs
   -- other-modules:
-  build-depends:       base ==4.5.*, mtl ==2.1.*, acid-state ==0.8.*, safecopy ==0.8.*, containers ==0.4.*, text ==0.11.*, directory ==1.1.*, happstack-server ==7.1.*, bytestring ==0.9.*, transformers ==0.3.*, blaze-markup ==0.5.*, blaze-html ==0.5.*, aeson ==0.6.*, http-conduit ==1.8.*
+  build-depends:       base ==4.5.*, mtl ==2.1.*, acid-state ==0.8.*, safecopy ==0.8.*, containers ==0.4.*, text ==0.11.*, directory ==1.1.*, happstack-server ==7.1.*, bytestring ==0.9.*, transformers ==0.3.*, blaze-markup ==0.5.*, blaze-html ==0.5.*, aeson ==0.6.*, http-conduit ==1.8.*, random-extras, random-source, random-fu
