--- a/Democrify/Democrify.cabal
+++ b/Democrify/Democrify.cabal
@@ -18,22 +18,22 @@ cabal-version:       >=1.8
 executable Democrify
   -- main-is:
   -- other-modules:
-  build-depends:       base ==4.5.*,
+  build-depends:       base,
                        mtl ==2.1.*,
                        acid-state ==0.8.*,
                        safecopy ==0.8.*,
-                       containers ==0.4.*,
+                       containers,
                        text ==0.11.*,
                        transformers ==0.3.*,
                        yaml ==0.8.*,
-                       directory ==1.1.*,
+                       directory,
                        blaze-markup ==0.5.*,
                        blaze-html ==0.6.*,
                        scotty ==0.4.*,
-                       bytestring ==0.9.*,
+                       bytestring,
                        random-fu ==0.2.*,
                        random-extras ==0.19.*,
                        random-source ==0.3.*,
                        http-types ==0.8.*,
                        aeson ==0.6.*,
-                       http-conduit ==1.9.*
+                       http-conduit
